--- a/HRTools_v2/Views/EmployeeData.xaml
+++ b/HRTools_v2/Views/EmployeeData.xaml
@@ -954,8 +954,8 @@
 
                                     <Grid Grid.Row="4">
 
-                                        <Button HorizontalAlignment="Right"
-                                                    Margin="5"
+                                        <Button HorizontalContentAlignment="Center"
+                                                    Margin="-10 0 -10 -8"
                                                     Background="Transparent" 
                                                     materialDesign:ShadowAssist.ShadowEdges="None"
                                                     materialDesign:ShadowAssist.ShadowDepth="Depth0"
